# flextool_plugin_generator

./: .gitignore  LICENSE  README.md  package-lock.json
src/: index.ts
src/utils/: template.ts
templates/external_plugin/: CMakeLists.txt  LICENSE  README.md  conanfile.py
templates/external_plugin/cmake/: Exports.cmake  Find<%= projectName %>.cmake  Findexternal_plugin.cmake  ProjectFiles.cmake  conan_setup.cmake  parse_version_file.cmake
templates/external_plugin/conf/: <%= projectName %>.conf  external_plugin.conf
templates/external_plugin/include/<%= projectName %>/: EventHandler.hpp  Tooling.hpp
templates/external_plugin/include/external_plugin/: EventHandler.hpp  Tooling.hpp
templates/external_plugin/src/: EventHandler.cc  Tooling.cc  plugin_main.cc
templates/external_plugin/test_package/: conanfile.py
templates/external_plugin/tests/: CMakeLists.txt
templates/external_plugin/tests/code_generation/: main.cc
templates/external_plugin/tools/: run_tool.cmake
